--- a/service/service/pom.xml
+++ b/service/service/pom.xml
@@ -25,11 +25,19 @@
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
             <version>1.0.4</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.0.31-beta</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>glassfish</artifactId>
+            <version>1.13</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         <dependency>
